etc/iptables.conf
# Generated by iptables-save v1.4.10 on Sat Jun 30 15:09:13 2012
*filter
:INPUT ACCEPT [8232:860429]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2033:990656]
-A FORWARD -i eth1 -j ACCEPT 
-A OUTPUT -o eth2 -m owner --uid-owner root -j ACCEPT 
-A OUTPUT -o eth2 -j REJECT --reject-with icmp-port-unreachable 
-A OUTPUT -o eth1 -m owner --uid-owner root -j ACCEPT 
-A OUTPUT -o eth1 -m owner --uid-owner dnsmasq -j ACCEPT 
-A OUTPUT -o eth1 -m owner --uid-owner openfire -j ACCEPT 
-A OUTPUT -o eth1 -j REJECT --reject-with icmp-port-unreachable 
COMMIT
# Completed on Sat Jun 30 15:09:13 2012
# Generated by iptables-save v1.4.10 on Sat Jun 30 15:09:13 2012
*nat
:PREROUTING ACCEPT [733013:53010247]
:INPUT ACCEPT [657352:43885983]
:OUTPUT ACCEPT [6779:460420]
:POSTROUTING ACCEPT [2574:185307]
-A POSTROUTING -o eth0 -j MASQUERADE 
COMMIT
# Completed on Sat Jun 30 15:09:13 2012
